--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ owner:
   facebook:       
   github:         "summerspirit"
   stackoverflow: 
-  linkedin:       "/torontotechstoryteller"
+  linkedin:       "torontotechstoryteller"
   instagram:      
   lastfm:         
   tumblr: 
