--- a/_config.yml
+++ b/_config.yml
@@ -39,10 +39,10 @@ links:
     url: /about/
   - title: Posts
     url: /posts/
-  - title: Theme Setup
-    url: /theme-setup/
-  - title: Made Mistakes
-    url: http://mademistakes.com
+  - title: Projects
+    url: /projects/
+  - title: Go Yonder
+    url: https://svbtle.com/magazine
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
