--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Naomi's Most Excellent Site
 description:      where she will write wondrous and amazing things
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://summerspirit.github.io #http://localhost:4000
+url:             http://localhost:4000 #http://summerspirit.github.io #http://localhost:4000
 disqus_shortname: 
 
 # Owner/author information
