--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ pygments:    true
 markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:projects
+permalink:   /:categories/:title/
 
 kramdown:
   auto_ids: true
